--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Cayman Blog Theme
-description: Cayman Blog Theme is a clean, responsive blogging theme for Jekyll and Gitlab/GitHub Pages.
+title: Glowdan's
+description: Share something about Go/PHP and devops.
 show_downloads: true
 
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
-url: "https://lorepirri.github.io" # change this to the base hostname & protocol for your site
+url: "https://glowdan.github.io" # change this to the base hostname & protocol for your site
 
 
 google_analytics:
@@ -11,15 +11,15 @@ google_analytics:
 # cayman-blog date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 cayman-blog:
-  date_format: "%b %-d, %Y"
+  date_format: "%Y %b %-d"
 
 theme: # leave it empty
 
 # social
-author: lorepirri
+author: glowdan
 image: /thumbnail-jumbo.png
 twitter:
-  username: lorepirri
+  username: glowdan
 
 plugins:
   - jekyll-target-blank
